partial fix